--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb+srv://root:root@cluster0.0htwi.mongodb.net/apv?retryWrites=true&w=majority&appName=Cluster0
+
+JWT_SECRET=secretword
